mono-tools (2.0-4) UNRELEASED; urgency=low

  * debian/monodoc.1,
    debian/monodoc-browser.manpages:
    + Provide a manpage for the "monodoc" command

 -- Jo Shields <directhex@apebox.org>  Wed, 10 Jun 2009 19:42:00 +0100

mono-tools (2.0-3) unstable; urgency=low

  [ Jo Shields ]
  * debian/control:
    + Add Vcs-* fields
  * debian/monodoc-browser.install:
    + Actually use Webkit# renderer, don't just build it and throw it away

  [ Sebastian Dröge ]
  * debian/control:
    + Build depend on libgnome2.24-cil for the GNOME# 2.24
      transition (Closes: #527783).
    + Update Standards-Version to 3.8.1. 

 -- Sebastian Dröge <slomo@debian.org>  Thu, 14 May 2009 08:54:21 +0200

mono-tools (2.0-2) unstable; urgency=low

  * Upload to unstable.
  * debian/control:
    + Versioned mono-devel build-dep using >= 2.0.1, as only that version
      contains the csc program.

 -- Mirco Bauer <meebey@debian.org>  Wed, 25 Feb 2009 23:32:46 +0100

mono-tools (2.0-1) experimental; urgency=low

  [ David Paleino ]
  * New upstream release
  * Group Policy:
    + implemented get-orig-source in debian/rules
  * debian/compat bumped to 7
  * debian/control:
    + Build-Depends:
      - added autotools-dev, autoconf, automake
      - added mono-devel
      - removed mono-mcs, mono-gmcs, mono-gac and mono-1.0-devel
      - added libmono-winforms2.0-cil
      - added libmono-webbrowser0.5-cil
      - removed libmono1.0-cil
      - debhelper bumped to (>= 7)
    + fixed spurious dot in long description
    + New binary packages:
      - mono-profiler, since these two related programs would have gone
                       into two different packages, and this is not nice
                       at all;
      - gendarme, because it would've been split into mono-tools-devel and
                  mono-tools-gui, like mono-profiler; because it uses 
                  System.Windows.Forms.
                  Added Conflicts and Replaces mono-tools-devel (<< 2.0),